# tur-tauri

./: .gitignore  README.md  build-flatpak.sh  index.html  package-lock.json  package.json
.flatpak-builder/ccache/0/: stats
.flatpak-builder/checksums/: x86_64-com.kaizen.tur.yml
.github/workflows/: release.yml  snap.yml
packaging/aur/: PKGBUILD
packaging/fedora/: README.md  com.kaizen.tur.desktop  make-sources.sh  tur-tauri.spec
packaging/flatpak/: cargo-sources.json  com.kaizen.tur.metainfo.xml  com.kaizen.tur.yml  io.github.greykaizen.tur.metainfo.xml  io.github.greykaizen.tur.yml  node-sources.json  package-lock.json
packaging/shared/: com.kaizen.tur.desktop
repo/: summary  summary.idx
repo/summaries/: 043ae331e484192369f28fc077614eee73df1ce627ef4aa12145adf8dc78529f-957256235622df90daf2ed77817826460b38073590771a1700e6898c9555498f.delta  18bc4ef173fc9c85640211905eb3a4d8076f48126521fd6baa40f11540807565-957256235622df90daf2ed77817826460b38073590771a1700e6898c9555498f.delta  705b69be9fc5a5f1843548b8f1e40776c07cb664b012b2d59829638f07a96ee0-957256235622df90daf2ed77817826460b38073590771a1700e6898c9555498f.delta  (+2 more)
snap/: snapcraft.yaml
src/: App.css  App.old.tsx  App.tsx  ConfirmationView.tsx  InstanceView.old.tsx  InstanceView.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  task_manager.rs
src-tauri/src/engines/: aria2c_adapter.rs
src-tauri/src/plugins/: yt_dlp.rs
src/components/: AddDownloadDialog.tsx  SettingsDialog.tsx
tasks/: 0.1.0.md  0.2.0.md  0.3.0.md
(+295 files in other folders)
